--- a/blogpost2.html
+++ b/blogpost2.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>PRISCILLA C WONG</title>
+    <title>PRISCILLA | BLOG</title>
     <link rel="stylesheet" type="text/css" href="css/blogpost2.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
   </head>
@@ -31,7 +31,7 @@
       <p class="center">Next stop on our itinerary was going to Brooklyn and seeing the Brooklyn Bridge.</p>
       <img class="blog" src="images/blogpost1/brooklyn.jpeg">
       <img class="blog" src="images/blogpost1/brooklynbridge.jpeg">
-      <p class="paragraphs">Right before walking the bridge, we went to have pizza at Grimaldi’s Pizzeria and the place was crowded. Instead of waiting in line outside in the cold, we ordered our pizza to go and it was definitely quicker than waiting in line. We walked towards the Brooklyn Bridge eating the pizza.  The walk onto the bridge was quite a long walk but worth seeing the view. Next stop of the day was the Vietnam Memorial.</p>
+      <p class="paragraphs">Right before walking the bridge, we went to have pizza at Grimaldi's Pizzeria and the place was crowded. Instead of waiting in line outside in the cold, we ordered our pizza to go and it was definitely quicker than waiting in line. We walked towards the Brooklyn Bridge eating the pizza.  The walk onto the bridge was quite a long walk but worth seeing the view. Next stop of the day was the Vietnam Memorial.</p>
       <img class="blog" src="images/blogpost1/vietnammemorial.jpeg">
       <p class="center">The memorial breathtaking and worth a visit. They displayed letters the soldiers and parents had written, and they were truly touching.</p>
       <img class="blog" src="images/blogpost1/vietnammemorial2.jpeg">
