--- a/blogpost3.html
+++ b/blogpost3.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>PRISCILLA C WONG</title>
+    <title>PRISCILLA | BLOG</title>
     <link rel="stylesheet" type="text/css" href="css/blogpost3.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
   </head>
