Fonts from Google imported Fixed apostrope

--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>PRISCILLA | ABOUT</title>
+    <link href="https://fonts.googleapis.com/css?family=Mali:300,400|Oswald:300,400,500,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/about.css"
   </head>
   <nav>
@@ -29,7 +30,7 @@
           <img class="photo" src="images/grad.jpg">
           <div class="infotext">
             <div>
-              <p class="design">Hello! I’m Priscilla Wong and I am 22 years old. I graduated with a B.S. in Business Administration with a concentration in Marketing. Being a recent college grad, I have been on the search for a job but also exploring other options as well! Professionally, I am currently pursuing jobs involving marketing, social media, and graphic design and jobs where I can build on these skills. Graphic design is something I have been interested in since high school and was able to improve on while I was in college working for my school's newspaper and I hope to be able to continue to grow my skills in graphic design in my future jobs.</p>
+              <p class="design">Hello! My name is Priscilla Wong and I am 22 years old. I graduated with a B.S. in Business Administration with a concentration in Marketing. Being a recent college grad, I have been on the search for a job but also exploring other options as well! Professionally, I am currently pursuing jobs involving marketing, social media, and graphic design and jobs where I can build on these skills. Graphic design is something I have been interested in since high school and was able to improve on while I was in college working for my school's newspaper and I hope to be able to continue to grow my skills in graphic design in my future jobs.</p>
               <p class="design">My hobbies include binge watching tv shows, interior design, traveling, and eating dessert! My favorite tv show at the moment is This Is Us. My favorite places that I have traveled to are Greece and Italy. Even better than going to these places is the food and dessert available!</p>
             </div>
             <div class="socialmedia">
