--- a/blog.html
+++ b/blog.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>PRISCILLA | BLOG</title>
+    <link href="https://fonts.googleapis.com/css?family=Mali:300,400|Oswald:300,400,500,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/blog.css"
   </head>
   <nav>
@@ -24,28 +25,28 @@
   </nav>
 	<body>
 		<div class="title">
-			<h1>A LIFESTYLE, TRAVEL, AND FOOD BLOG</h1>
+			<p>A LIFESTYLE, TRAVEL, AND FOOD BLOG</p>
 		</div>
 		<div class="banner">
 			<img class ="blogphoto" src="images/blogphoto.jpeg">
 			<h1 class="welcome">Welcome to my blog!</h1>
 		</div>
 		<div>
-			<h1 class="blog">My Recent Trip to New York City: Day 1 & 2</h1>
+			<h1 class="blogtitle">My Recent Trip to New York City: Day 1 & 2</h1>
 			<img class="blog" src="images/blogpost1/nyccover.jpeg">
 			<a class="margin" href="blogpost1.html">
 				<li class="blog">Read More</li>
 			</a>
 		</div>
 		<div>
-			<h1 class="blog">My Recent Trip to New York City: Day 3</h1>
+			<h1 class="blogtitle">My Recent Trip to New York City: Day 3</h1>
 			<img class="blog" src="images/blogpost1/stanten.jpeg">
 			<a class="margin" href="blogpost2.html">
 				<li class="blog">Read More</li>
 			</a>
 		</div>
 		<div>
-			<h1 class="blog">My Recent Trip to New York City: Day 4</h1>
+			<h1 class="blogtitle">My Recent Trip to New York City: Day 4</h1>
 			<img class="blog" src="images/blogpost1/washingtonsquare.jpeg">
 			<a class="margin" href="blogpost3.html">
 				<li class="blog">Read More</li>
