--- a/blogpost1.html
+++ b/blogpost1.html
@@ -2,6 +2,7 @@
   <head>
     <title>PRISCILLA | BLOG</title>
     <link rel="stylesheet" type="text/css" href="css/blogpost1.css">
+    <link href="https://fonts.googleapis.com/css?family=Mali:300,400|Oswald:300,400,500,600,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
   </head>
   <nav>
@@ -24,7 +25,7 @@
   </nav>
   <body>
     <div>
-			<h1 class="blog">My Recent Trip to New York City: Day 1 & 2</h1>
+			<h1 class="blogtitle">My Recent Trip to New York City: Day 1 & 2</h1>
 			<img class="blog" src="images/blogpost1/nyccover.jpeg">
       <p class="bold">Day 1</p>
       <p class="paragraphs">On the first day, I flew out from LAX at 7am and landed in New Jersey at Newark Liberty International Airport. What's funny about landing in New Jersey was that I had forgotten to do research on getting from NJ to Manhattan, but thankfully, I was able to quickly do some research when we landed and the staff in the airport were kind enough to assist us and direct us in the right direction regarding the types of transportation that was available. In the end, we took the air train from the airport into Manhattan and landed at Penn Station. Our Airbnb was in Queens and getting to Queens was a struggle, especially for someone who had not been to New York before and never had to deal with public transportation. From Penn Station we had to walk to another line of the subway and eventually got to Queens. When we finally got to our Airbnb, it was already 7pm and we were tired from the hour or so journey from the airport and quickly stepped out for dinner in Queens at a Mediterranean restaurant called Duzan Mediterranean Grill (My next blog post will go more indepth on the meals I had).
