--- a/blogpost2.html
+++ b/blogpost2.html
@@ -2,6 +2,7 @@
   <head>
     <title>PRISCILLA | BLOG</title>
     <link rel="stylesheet" type="text/css" href="css/blogpost2.css">
+    <link href="https://fonts.googleapis.com/css?family=Mali:300,400|Oswald:300,400,500,600,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
   </head>
   <nav>
@@ -23,7 +24,7 @@
     </ul>
   </nav>
   <body>
-			<h1 class="blog">My Recent Trip to New York City: Day 3</h1>
+			<h1 class="blogtitle">My Recent Trip to New York City: Day 3</h1>
 			<img class="blog" src="images/blogpost1/stanten.jpeg">
       <p class="bold">Day 3</p>
       <p class="paragraphs">We started the day off by taking the Staten Island Ferry to see the Statue of Liberty. What is great about the ferry is that it is free both ways, you get to see the Statue of Liberty from afar, and the trip is pretty quick, about 15 to 20 minutes. While being on Staten Island, we went to try some New York Pizza at Pier 76. The pizza here was AMAZING and would definitely recommend if you are in the area, since the place is about two blocks from the ferry station.</p>
