--- a/blogpost3.html
+++ b/blogpost3.html
@@ -2,6 +2,7 @@
   <head>
     <title>PRISCILLA | BLOG</title>
     <link rel="stylesheet" type="text/css" href="css/blogpost3.css">
+    <link href="https://fonts.googleapis.com/css?family=Mali:300,400|Oswald:300,400,500,600,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
   </head>
   <nav>
@@ -23,7 +24,7 @@
     </ul>
   </nav>
   <body>
-			<h1 class="blog">My Recent Trip to New York City: Day 4</h1>
+			<h1 class="blogtitle">My Recent Trip to New York City: Day 4</h1>
 			<img class="blog" src="images/blogpost1/washingtonsquare.jpeg">
       <p class="bold">Day 4</p>
       <p class="paragraphs">The first thing we did on our last and final day was eat at Ichiran, a ramen place that encourages its patrons to eat alone. Here, we ate next to one another but were put in separate stalls. The food was again delicious but a little expensive considering it is ramen.</p>
