--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>PRISCILLA | CONTACT</title>
+    <link href="https://fonts.googleapis.com/css?family=Mali:300,400|Oswald:300,400,500,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/contact.css"
   </head>
   <nav>
